--- a/Blog/mysite/blog/templates/blog/post/list.html
+++ b/Blog/mysite/blog/templates/blog/post/list.html
@@ -3,7 +3,9 @@
 {% block title %}My Blog{% endblock %}
 
 {% block content %}
+
  <h1>My Blog</h1>
+
  {% for post in posts %}
    <h2>
      <a href="{{ post.get_absolute_url }}">
@@ -16,5 +18,6 @@
    {{ post.body|truncatewords:30|linebreaks }}
  {% endfor %}
 
-{% include "pagination.html" with page=posts %}
+{% include "pagination.html" with page=page_obj %}
+
 {% endblock %}
