--- a/Blog/mysite/blog/templates/blog/post/detail.html
+++ b/Blog/mysite/blog/templates/blog/post/detail.html
@@ -13,4 +13,21 @@
       share this post
     </a>
   </p>
+  {% with comments.count as total_comments %}
+    <h2>
+      {{ total_comments }} commentaire{{ total_comments|pluralize }}
+    </h2>
+  {% endwith %}
+  {% for comment in comments %}
+    <div class="comment">
+      <p class="info">
+        Comment {{ forloop.counter }} by {{ comment.name }}
+        {{ comment.created }}
+      </p>
+      {{ comment.body|linebreaks }}
+    </div>
+    {% empty %}
+    <p>There are no comments.</p>
+  {% endfor %}
+  {% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
