--- a/Blog/mysite/blog/templates/pagination.html
+++ b/Blog/mysite/blog/templates/pagination.html
@@ -2,7 +2,7 @@
   <span class="step-links">
 
     {% if page.has_previous %}
-      <a href="?page={{ page.previous_page_number }}">Précédent</a>
+      <a href="?page={{ page.previous_page_number }}">Previous</a>
     {% endif %}
 
     <span class="current">
@@ -10,7 +10,7 @@
     </span>
 
     {% if page.has_next %}
-      <a href="?page={{ page.next_page_number }}">Suivant</a>
+      <a href="?page={{ page.next_page_number }}">Next</a>
     {% endif %}
 
   </span>
